# restapi/request/owner_request_body.go
@@ -7,12 +7,12 @@ type OwnerPost struct {
 	Password		string		`json:"password"`
 	OwnerFullName	string		`json:"owner_full_name"`
 	Profile   		models.Profile 	`json:"profile"`
-	Address   		models.Address 	`json:"address"`
+	CommuneCode     string       `json:"commune_code"`
 }
 
 type OwnerPut struct {
 	Password		string		`json:"password"`
 	OwnerFullName	string		`json:"owner_full_name"`
 	Profile   		models.Profile 	`json:"profile"`
-	Address   		models.Address 	`json:"address"`
+	CommuneCode     string       `json:"commune_code"`
 }
